saved src/main/java/com/java_template/prototype/EntityControllerPrototype.java: 0fc58a96-60e6-11b2-a044-564507c7d2b7